# Hexapod_Sim2Real

./: README.md  test_full_pack.py  test_pack.py
deploy/deploy_real/: MOTOR_DEBUG_LOGGING_GUIDE.md  SIM2REAL_file_roles.md  check_keys.py  config.py  config_go2.py  config_hexapod.py  config_hexapod_tethered.py  convert_checkpoint_to_jit.py  deploy_real.py  deploy_real_go2.py  deploy_real_hexapod copy.py  deploy_real_hexapod.py  deploy_real_hexapod_tethered copy.py  deploy_real_hexapod_tethered.py  plot_motor_curves.py  test_load_model.py
deploy/deploy_real/app_cpp/: CMakeLists.txt  README.MD  command.cpp  command.h  config.h  main.cpp  math_ops.c  math_ops.h  motor_control.c  motor_control.h  queue.h  transmit.cpp  transmit.h
deploy/deploy_real/app_cpp/使用说明/: 使用文档.md
deploy/deploy_real/common/: command_helper.py  command_helper_hexapod.py
deploy/deploy_real/configs/: go2.yaml  hexapod.yaml  hexapod_tethered.yaml
deploy/deploy_real/hexapod_tethered_utils/: cable_arm_yaw_sensor.py  cable_end_pitch_sensor.py  cable_tension_sensor.py  joystick_reader.py  servo_motor_torque_sensor.py
deploy/deploy_real/hexapod_tethered_utils_gkq/: diff1.py  test.py  test1.py  test_01.py
deploy/deploy_real/imu_sdk/: imu_sdk.py  test_imu.py  test_vel.py
deploy/deploy_real/motor_igh_sdk/: deploy_real_el4090_pysoem.py  deploy_real_el4090_speed_pysoem.py  el4090_motor_sdk.py
deploy/deploy_real/motor_igh_sdk copy/: rl_real_el4090_demo.py
deploy/pre_train/hexapod/: policy_23000.pt  policy_2500.pt  policy_30000.pt  policy_4000.pt  policy_45000.pt  policy_5000.pt  policy_5500.pt  (+3 more)
(+11 files in other folders)
